--- a/style.css
+++ b/style.css
@@ -5,3 +5,8 @@
 #mainquote {
   border:  3px solid purple;
 }
+
+/* Set display to none for image*/
+        #image {
+            display: none;
+        }
